# PreprocessPipeline

./: .gitignore  Inspect_KS4_AmplitudeMerge.ipynb  Neurocode_xmp_edit.ipynb  PostProcessing.ipynb  README.md  Run_preprocessSession.ipynb  Run_preprocessSession.py  Sorting_comparison.ipynb  Sorting_comparison_KS.ipynb  Spike_sorting.ipynb  Spike_sorting_KS1.ipynb  Spike_sorting_KS4.ipynb  concattinate_recording.ipynb  environment.linux.yml  environment.windows.yml  environment.yml  launch_gui.bat  launch_gui.py  launch_gui.sh  preProcess_raw.ipynb  pyproject.toml  setup_env_windows.bat
change_log/: 2026-06-24-multi-kilosort-partitions.md  2026-06-24-multiday-staging.md  README.md
config/: preprocess_gui_default_config.json
env_locks/: conda-linux-64.explicit.txt  environment-linux-64.lock.yml  pip-freeze.txt
implementation_plan/: 2026-06-17-sorter-stage-and-multiday.md
scripts/: install_torch.py  setup_env.py
sorter/: Kilosort1_config.yaml  Kilosort2.5_config.yaml  Kilosort2.5_config.yml  Kilosort4_config.yaml
sorter/Kilosort-2.5/: update.md
sorter/Kilosort4/: CHANGELOG.md  CUSTOMIZATION_PLAN.md
src/: __init__.py  worker_defaults.py
src/postprocess/: __init__.py  ks4_diagnostics.py  metafile.py  pipeline.py  unit_classify.py  unit_split.py
src/preprocess/: __init__.py  artifact_removal.py  behavior.py  events.py  intan_rhd.py  io.py  mergepoints.py  metafile.py  multiday.py  paths.py  pipeline.py  recording.py  session.py  sorter_runner.py  state_scoring.py
utils/: artifact_removal.py  data_io.py  unit_classify.py  unit_split.py
(+25 files in other folders)
